feat: add shiki custom theme

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,20 @@
 
 :root {
   --scrollbar-color: rgba(0, 0, 0, 0.3);
+
+  /* shiki theme noir */
+  --shiki-foreground: #ffffff;
+  --shiki-token-constant: #a7a7a7;
+  --shiki-token-string: #a7a7a7;
+  --shiki-token-comment: #666666;
+  --shiki-token-keyword: #a7a7a7;
+  --shiki-token-parameter: #a7a7a7;
+  --shiki-token-function: #ffffff;
+  --shiki-token-string-expression: #a7a7a7;
+  --shiki-token-punctuation: #a7a7a7;
+  --shiki-token-link: #a7a7a7;
+  --shiki-token-number: #ffffff;
+  --shiki-token-property: #a7a7a7;
 }
 
 :root.dark {
