feat: add steps

--- a/app/globals.css
+++ b/app/globals.css
@@ -35,3 +35,15 @@ html {
 html body[data-scroll-locked] {
   margin-right: 0 !important;
 }
+
+@layer utilities {
+  .step {
+    counter-increment: step;
+  }
+
+  .step:before {
+    @apply absolute inline-flex h-9 w-9 items-center justify-center rounded-full border border-zinc-200 bg-white text-center -indent-px font-mono text-base font-medium dark:border-zinc-800 dark:bg-zinc-950;
+    @apply ml-[-50px] mt-[-4px];
+    content: counter(step);
+  }
+}
